# umbral

./: .gitignore  Cargo.toml  INSTALL.md  README.md  install.ps1  install.sh  test_repl.sh  test_stdlib.txt  uninstall.ps1  uninstall.sh
codigo-ejemplo/: codigo.um  herencia.um  main.um
crates/umbral-cli/: Cargo.toml  README.md
crates/umbral-cli/src/: main.rs
crates/umbral-interpreter/: Cargo.toml  README.md
crates/umbral-interpreter/src/: error.rs  lib.rs
crates/umbral-lexer/: Cargo.toml  README.md
crates/umbral-lexer/src/: lib.rs
crates/umbral-parser/: Cargo.toml  README.md
crates/umbral-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/umbral-parser/src/parser/: clases.rs  constantes.rs  controles.rs  enums.rs  expresiones.rs  funciones.rs  importaciones.rs  instancias.rs  interfaces.rs  mod.rs  objetos.rs  sentencias.rs  tokens.rs  utilidades.rs  variables.rs
crates/umbral-repl/: Cargo.toml  README.md
crates/umbral-repl/src/: main.rs
crates/umbral-runtime/: Cargo.toml  README.md
crates/umbral-runtime/src/: lib.rs
crates/umbral-runtime/src/runtime/: clases.rs  entorno.rs  enums.rs  errores.rs  funciones.rs  interfaces.rs  interpretador.rs  mod.rs  valores.rs
crates/umbral-runtime/src/runtime/stdlib/: collections.rs  errores.rs  fs.rs  json.rs  mod.rs  num.rs  path.rs  proc.rs  str.rs  time.rs
ejemplos/: 02_funciones.um  03_condicionales.um  04_bucles.um  05_clases.um  06_importaciones_exportaciones.um  07_tipos_avanzados.um  08_ejemplo_completo.um  09_uso_importaciones.um  10_operador_spread.um  13_demo_completa.um  14_demo_completa.um  17_enums_sistema_completo.um  17_manejo_errores.um  18_errores_avanzados.um  19_metodos_asincronos.um  README.md
ejemplos/modulos/: clases.um  constantes.um  enums_exportados.um  funciones.um  matematicas.um  tipos.um
