[workspace]
resolver = "2"
members = [
    "crates/umbral-lexer",
    "crates/umbral-parser",
    "crates/umbral-runtime",
    "crates/umbral-interpreter",
    "crates/umbral-cli",
    "crates/umbral-repl"
]

[workspace.package]
version = "1.3.6"
edition = "2021"
authors = ["Heriberto S치nchez"]
description = "Lenguaje de programaci칩n de prop칩sito general"
license = "MIT"
repository = "https://github.com/hersac/umbral"

[package]
name = "umbral"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "umbral"
path = "crates/umbral-cli/src/main.rs"

[[bin]]
name = "umbral-repl"
path = "crates/umbral-repl/src/main.rs"

[dependencies]
umbral-interpreter = { path = "crates/umbral-interpreter" }
rustyline = "14.0"
tokio = { version = "1", features = ["full"] }

[package.metadata.deb]
maintainer = "Heriberto S치nchez"
depends = ""
section = "utils"
priority = "optional"

assets = [
    ["target/release/umbral", "/usr/bin/umbral", "755"],
    ["target/release/umbral-repl", "/usr/bin/umbral-repl", "755"],
    ["install.sh", "/usr/share/umbral/install.sh", "755"]
]
