[package]
name = "umbral-interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
umbral-lexer = { path = "../umbral-lexer" }
umbral-parser = { path = "../umbral-parser" }
umbral-runtime = { path = "../umbral-runtime" }
