[package]
name = "umbral-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
umbral-parser = { path = "../umbral-parser" }
umbral-lexer = { path = "../umbral-lexer" }
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0"
